--- a/HitList2/Base.lproj/Main.storyboard
+++ b/HitList2/Base.lproj/Main.storyboard
@@ -141,17 +141,52 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ow-Ms-LW7">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem title="&lt; Go Back" id="Zbi-RB-zKd"/>
+                                    <barButtonItem title="Exit" id="Zbi-RB-zKd">
+                                        <connections>
+                                            <action selector="goBackTapped:" destination="gVr-Vw-60y" id="WR2-w8-fia"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ws1-H5-9Fq"/>
+                                    <barButtonItem title="Clear" id="dLc-Bo-KoF">
+                                        <connections>
+                                            <action selector="clearImage:" destination="gVr-Vw-60y" id="oEQ-kr-XXz"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="F2R-fj-76V"/>
+                                    <barButtonItem title="Save" id="YqQ-oa-quF">
+                                        <connections>
+                                            <action selector="saveDrawing:" destination="gVr-Vw-60y" id="GHb-8B-q3j"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drawing Saved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbZ-xs-43D">
+                                <rect key="frame" x="213" y="285" width="174" height="31"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j8H-XZ-wzO">
+                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="j8H-XZ-wzO" secondAttribute="trailing" id="0ba-d3-iNs"/>
+                            <constraint firstItem="j8H-XZ-wzO" firstAttribute="leading" secondItem="5Us-aZ-Oaj" secondAttribute="leading" id="5hN-hB-GKx"/>
                             <constraint firstItem="0Ow-Ms-LW7" firstAttribute="leading" secondItem="5Us-aZ-Oaj" secondAttribute="leading" id="MHw-9a-QdC"/>
                             <constraint firstAttribute="trailing" secondItem="0Ow-Ms-LW7" secondAttribute="trailing" id="OUz-20-MIT"/>
+                            <constraint firstItem="0Ow-Ms-LW7" firstAttribute="top" secondItem="j8H-XZ-wzO" secondAttribute="bottom" id="PFT-4D-X7h"/>
+                            <constraint firstItem="JbZ-xs-43D" firstAttribute="centerX" secondItem="5Us-aZ-Oaj" secondAttribute="centerX" id="SIJ-RU-5Rf"/>
                             <constraint firstItem="Y78-eO-3VV" firstAttribute="top" secondItem="0Ow-Ms-LW7" secondAttribute="bottom" id="UZ7-Oh-lix"/>
+                            <constraint firstItem="JbZ-xs-43D" firstAttribute="centerY" secondItem="5Us-aZ-Oaj" secondAttribute="centerY" id="noD-Q3-5Ih"/>
+                            <constraint firstItem="j8H-XZ-wzO" firstAttribute="top" secondItem="3V1-Wv-dgC" secondAttribute="bottom" id="xjr-hb-1Dc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="canvas" destination="j8H-XZ-wzO" id="QqA-kT-8vQ"/>
+                        <outlet property="gestureNameLabel" destination="JbZ-xs-43D" id="wPQ-8Y-gBh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bio-oR-hF0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
